# MECH-M-DUAL-1-DBM

./: .gitignore  .nojekyll  .zenodo.json  CITATION.cff  GDM.code-workspace  LICENSE  README.md  _quarto.yml  dark-style.css  index.html  index.qmd  intro.html  intro.qmd  pyproject.toml  references.bib  references.html  release.sh  robots.txt  search.json  sitemap.xml  style.css  summary.html  summary.qmd
.github/workflows/: publish.yml
_assets/: Transistor.excalidraw
_assets/matrixdc/: matrixdc.excalidraw
_assets/regression/: AUT_UE10-19.ods
_assets/sensing/: sensing.excalidraw
_assets/signal/: Transistor.excalidraw
_assets/statistics/: statistics.excalidraw
appendices/: example.html  example.qmd
basics/: epilogue.html  epilogue.qmd  index.html  index.qmd  linearalgebra.html  linearalgebra.qmd  sets.html  sets.qmd
matrixdc/: eigen.html  eigen.qmd  index.html  index.qmd  svd.html  svd.qmd
regression/: index.html  index.qmd  linear.html  linear.qmd  nonlinear.html  nonlinear.qmd  optimizers.html  optimizers.qmd
sensing/: compsensing.html  compsensing.qmd  index.html  index.qmd  sparsity.html  sparsity.qmd
signal/: fourier.html  fourier.qmd  index.html  index.qmd  laplace.html  laplace.qmd  twodim.html  twodim.qmd  wavelet.html  wavelet.qmd
site_libs/bootstrap/: bootstrap-1e3068369e36718fca5120af1b2594eb.min.css  bootstrap-af197cfaa1b998947a0d2985bb402727.min.css  bootstrap-bbb4ab346ed2948d3a2a60dc9ba93ba5.min.css  bootstrap-dark-1cff5245d27da707879debdfdc57e7b2.min.css  bootstrap-dark-54b5e27635ce7b559bdb01e89402beb6.min.css  bootstrap-dark-9998c2ee6da4221bd56fa9d29e80e367.min.css  bootstrap-dark.min.css  (+3 more)
statistics/: bayesian.html  bayesian.qmd  index.html  index.qmd  kalman.html  kalman.qmd
