[project]
name = "Softwaredesign"
version = "0.1.0"
description = "Class"
authors = [
    {name = "Peter Kandolf", email = "peter.kandolf@mci.edu"},
]
dependencies = [
    "jupyter>=1.1.1",
    "plotly>=5.24.0",
    "matplotlib>=3.9.2",
    "quarto-cli>=1.5.57",
]
requires-python = "==3.12.*"
readme = "README.md"

[tool.pdm]
distribution = false
