[project]
name = "DBM"
version = "0.1.0"
description = "Class"
authors = [
    {name = "Peter Kandolf", email = "peter.kandolf@mci.edu"},
]
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
    "quarto-cli>=1.5.57",
    "pyqt5>=5.15.11",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scipy>=1.14.1",
    "imageio>=2.35.1",
    "owid-catalog>=0.3.11",
    "odfpy>=1.4.1",
    "DateTime>=5.5",
    "pywavelets>=1.7.0",
    "scikit-learn>=1.5.2",
    "netCDF4>=1.7.2",
    "python-sensors>=0.3.5",
]
requires-python = "==3.12.*"
readme = "README.md"

[tool.pdm]
distribution = false
